--- a/docker/govendor/Dockerfile
+++ b/docker/govendor/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:latest
+ARG GO_VERSION=latest
+FROM golang:${GO_VERSION}
 
 # install govendor
 RUN go get -u -v github.com/kardianos/govendor
