go-micro 映像檔，加上 gorm, redis, toml

--- a/docker/go-micro/Dockerfile
+++ b/docker/go-micro/Dockerfile
@@ -9,3 +9,10 @@ RUN go get -u -v github.com/micro/go-micro
 RUN go get -u -v github.com/micro/go-grpc
 RUN go get -u -v github.com/micro/protoc-gen-micro
 RUN go get -u -v github.com/micro/micro
+
+# install database packages
+RUN go get -u -v github.com/jinzhu/gorm
+RUN go get -u -v github.com/garyburd/redigo/redis
+
+# install config packages
+RUN go get -u -v github.com/naoina/toml
