--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,15 @@ version: '3'
 services:
     micro:
         build: ./docker/micro
+        command: go run /keep.go
+        volumes:
+            - ./keep.go:/keep.go
 
     go-micro:
         build: ./docker/go-micro
+        command: go run /keep.go
+        volumes:
+            - ./keep.go:/keep.go
 
     govendor:
         build: ./docker/govendor
