--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     micro:
-        build: ./docker/micro
+        build: ./docker/micro_grpc
         command: go run /keep.go
         volumes:
             - ./keep.go:/keep.go
