--- a/docker/go-micro/Dockerfile
+++ b/docker/go-micro/Dockerfile
@@ -1,7 +1,5 @@
 ARG GO_VERSION=1.10.2
-FROM golang:${GO_VERSION}-alpine
-RUN apk update && apk upgrade && \
-    apk add --no-cache bash git openssh
+FROM golang:${GO_VERSION}
 
 # install govendor
 RUN go get -u -v github.com/kardianos/govendor
@@ -13,6 +11,7 @@ RUN go get -u -v github.com/micro/protoc-gen-micro
 RUN go get -u -v github.com/micro/micro
 
 # install database packages
+RUN go get -u -v github.com/go-sql-driver/mysql
 RUN go get -u -v github.com/jinzhu/gorm
 RUN go get -u -v github.com/garyburd/redigo/redis
 
